<resources>
    <string name="app_name">FoodyApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_fragment">Favorite</string>
    <string name="joke_fragment">Joke</string>
    <string name="check_the_connection_and_try_again">Check the connection and try again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="vegan">Vegan</string>
    <string name="please_check_it_later_or_connect_developer">Please check it later or connect developer</string>
    <string name="have_problems_ot_fetch_data">Problems of fetch data</string>
    <string name="please_wait">Please wait ...</string>
    <string name="data_is_loading">Data is loading</string>

    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes.</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="share">Share</string>
    <string name="search2">Search</string>
    <string name="save">Save</string>
    <string name="the_favorite_list_is_empty">The Favorite list is empty !</string>
    <string name="delete">Delete</string>
</resources>