<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bundle"
            type="com.codinginflow.foodyapp.model.ResultRecipe" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detailfragment.overview.OverviewFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:contentScrim="@color/purple_500"
                app:layout_scrollFlags="scroll">

                <ImageView
                    android:id="@+id/main_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:loadImageFromUrl="@{bundle.image}"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <View
                    android:id="@+id/gradient_overlay"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:background="@drawable/gradient_overlay"
                    android:layout_gravity="bottom"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/time_imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_clock"
                            app:tint="@color/white" />

                        <TextView
                            android:id="@+id/time_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_medium"
                            android:layout_gravity="center"
                            android:setNumberOfMinutes="@{bundle.readyInMinutes}"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/likes_imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_heart"
                            app:tint="@color/white" />

                        <TextView
                            android:id="@+id/likes_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_medium"
                            android:layout_gravity="center"
                            android:setNumberOfLikes="@{bundle.aggregateLikes}"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    android:id="@+id/title_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@{bundle.title}"
                    android:textColor="@color/darkGray"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/vegetarian_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:applyColor="@{bundle.vegetarian}"
                    android:src="@drawable/ic_checkmark"
                    app:layout_constraintStart_toStartOf="@+id/title_textView"
                    app:layout_constraintTop_toBottomOf="@+id/title_textView"
                    app:tint="@color/darkGray" />

                <TextView
                    android:id="@+id/vegetarian_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:applyColor="@{bundle.vegetarian}"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/vegetarian"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="@+id/vegetarian_imageView"
                    app:layout_constraintStart_toEndOf="@+id/vegetarian_imageView"
                    app:layout_constraintTop_toTopOf="@+id/vegetarian_imageView" />

                <ImageView
                    android:id="@+id/vegan_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:applyColor="@{bundle.vegan}"
                    android:src="@drawable/ic_checkmark"
                    app:layout_constraintStart_toStartOf="@+id/vegetarian_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/vegetarian_imageView"
                    app:tint="@color/darkGray" />

                <TextView
                    android:id="@+id/vegan_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:applyColor="@{bundle.vegan}"
                    android:text="@string/vegan"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView"
                    app:layout_constraintStart_toEndOf="@+id/vegan_imageView"
                    app:layout_constraintTop_toTopOf="@+id/vegan_imageView" />

                <ImageView
                    android:id="@+id/gluten_free_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:applyColor="@{bundle.glutenFree}"
                    android:src="@drawable/ic_checkmark"
                    app:layout_constraintBottom_toBottomOf="@+id/vegetarian_textView"
                    app:layout_constraintStart_toEndOf="@+id/vegetarian_textView"
                    app:layout_constraintTop_toTopOf="@+id/vegetarian_textView"
                    app:tint="@color/darkGray" />

                <TextView
                    android:id="@+id/gluten_free_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:applyColor="@{bundle.glutenFree}"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/gluten_free"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="@+id/gluten_free_imageView"
                    app:layout_constraintStart_toEndOf="@+id/gluten_free_imageView"
                    app:layout_constraintTop_toTopOf="@+id/gluten_free_imageView" />

                <ImageView
                    android:id="@+id/dairy_free_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:applyColor="@{bundle.dairyFree}"
                    android:src="@drawable/ic_checkmark"
                    app:layout_constraintStart_toStartOf="@+id/gluten_free_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/gluten_free_imageView"
                    app:tint="@color/darkGray" />

                <TextView
                    android:id="@+id/dairy_free_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:applyColor="@{bundle.dairyFree}"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/dairy_free"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="@+id/dairy_free_imageView"
                    app:layout_constraintStart_toEndOf="@+id/dairy_free_imageView"
                    app:layout_constraintTop_toTopOf="@+id/dairy_free_imageView" />

                <ImageView
                    android:id="@+id/healthy_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:applyColor="@{bundle.veryHealthy}"
                    android:src="@drawable/ic_checkmark"
                    app:layout_constraintBottom_toBottomOf="@+id/gluten_free_textView"
                    app:layout_constraintStart_toEndOf="@+id/gluten_free_textView"
                    app:layout_constraintTop_toTopOf="@+id/gluten_free_textView"
                    app:tint="@color/darkGray" />

                <TextView
                    android:id="@+id/healthy_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:applyColor="@{bundle.veryHealthy}"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/healthy"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="@+id/healthy_imageView"
                    app:layout_constraintStart_toEndOf="@+id/healthy_imageView"
                    app:layout_constraintTop_toTopOf="@+id/healthy_imageView" />

                <ImageView
                    android:id="@+id/cheap_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:applyColor="@{bundle.cheap}"
                    android:src="@drawable/ic_checkmark"
                    app:layout_constraintStart_toStartOf="@+id/healthy_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/healthy_imageView"
                    app:tint="@color/darkGray" />

                <TextView
                    android:id="@+id/cheap_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:applyColor="@{bundle.cheap}"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/cheap"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="@+id/cheap_imageView"
                    app:layout_constraintStart_toEndOf="@+id/cheap_imageView"
                    app:layout_constraintTop_toTopOf="@+id/cheap_imageView" />

                <TextView
                    android:id="@+id/summary_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_medium"
                    android:parseHtml="@{bundle.summary}"
                    android:layout_margin="12dp"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/dairy_free_textView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>